--- a/public/error-500.html
+++ b/public/error-500.html
@@ -1,102 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Genie :: The highly productive Julia web framework</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>ThorAxe :: Supplementary material</title>
+    <!-- Global site tag (gtag.js) - Google Analytics : start -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VB39XCP4F1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  <!-- Bootstrap -->
-  <link href="/css/genie/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/genie/style.css" rel="stylesheet">
-  <link href="/css/genie/prism.css" rel="stylesheet" />
-</head>
-<body id="page-top" data-spy="scroll" data-target=".side-menu">
-  <div class="container-fluid">
-    <!-- Start: Header -->
-    <div class="row hero-header" id="home">
-      <div class="row">
-        <div class="col-md-7">
-          <h1 id="main-heading">500 Internal Server Error</h1>
-          <h2>
-            <code>
-<error_description/>
-            </code>
-          </h2>
-          <br>
-          <a href="/" class="btn btn-lg btn-red">Go Home</a>
+      gtag('config', 'G-VB39XCP4F1');
+    </script>
+    <!-- Google Analytics : end -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/ThorAxe/css/thoraxeresults.css">
+  </head>
+  <body>
+    <div class="page">
+      <div class="content">
+        <div class="jumbotron">
+          <a href="/ThorAxe" class="text-dark no_text_decoration">
+           <h1 class="display-4">ThorAxe</h1>
+           <p class="lead">Supplementary Material</p>
+          </a>
         </div>
-        <div class="col-md-5 hidden-xs">
-          <img src="/img/genie/genie-sad.png" class="rocket animated bounce" alt="Sad Genie">
+        <div class="error-message">
+          <div class="alert alert-danger" role="alert">
+            <h4 class="alert-heading">500 Internal Server Error</h4>
+            <error_description/>
+            <hr>
+            <p>Please return to the <a href="/ThorAxe" class="alert-link">HOME PAGE</a> and try again.</p>
+          </div>
+          <pre class="error-info"><code>
+            <error_message/>
+          </code></pre>
         </div>
       </div>
-    </div>
-    <!-- End: Header -->
-  </div>
-
-  <div class="container-fluid" id="error-console">
-    <div class="row me-row content-ct">
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-          <pre>
-            <code class="language-julia">
-<error_message/>
-            </code>
-          </pre>
-        </div>
-        <div class="col-md-1"></div>
+      <div class="footer">
+          <span class="footer-text text-muted">
+            Zea, D. J., Laskina, S., Richard, H., & Laine, E. (2020). 
+            <em>Assessing Conservation of Alternative Splicing with Evolutionary Splicing Graphs. </em> 
+            <a href="https://doi.org/10.1101/2020.11.14.382820">BioRxiv.</a>
+          </span>
       </div>
     </div>
-  </div>
-
-  <!-- Start: Help -->
-  <div class="container-fluid whats-next" id="whats-next">
-    <div class="row me-row content-ct">
-      <h2 class="row-title">What next?</h2>
-      <div class="col-md-4 feature">
-        <img src="/img/genie/docs.png" class="speaker-img" alt="The docs">
-        <h3>The docs</h3>
-        <p>Check out the guides, try the walk-throughs, or read the API docs.</p>
-        <a href="https://genieframework.github.io/Genie.jl/" target="_blank">Read the docs</a>
-      </div>
-      <div class="col-md-4 feature">
-        <img src="/img/genie/contribute-2.png" class="speaker-img" alt="The docs">
-        <h3>Contribute</h3>
-        <p>Add your favorite new features, report issues, or squash some bugs.</p>
-        <a href="https://github.com/GenieFramework/Genie.jl" target="_blank">Visit GitHub page</a>
-      </div>
-      <div class="col-md-4 feature">
-        <img src="/img/genie/community.png" class="speaker-img" alt="Get in touch">
-        <h3>Get in touch</h3>
-        <p>Come say "Hi!" -- join Genie's community on Gitter.</p>
-        <a href="https://gitter.im/essenciary/Genie.jl" target="_blank">Go to Gitter</a>
-      </div>
-    </div>
-  </div>
-  <!-- End: Help -->
-
-  <!-- Start: Footer -->
-  <div class="container-fluid footer">
-    <div class="row footer-credit">
-      <div class="col-md-6 col-sm-6">
-        <p>Created by <a href="https://github.com/essenciary">Adrian Salceanu</a> and
-          <a href="https://github.com/GenieFramework/Genie.jl/graphs/contributors">awesome contributors</a> |
-          <a href="https://github.com/GenieFramework/Genie.jl/blob/master/LICENSE.md">MIT licensed</a></p>
-      </div>
-      <div class="col-md-6 col-sm-6">
-        <p>
-          ©️ All rights reserved for the Genie name, logo and overall branding.
-        </p>
-      </div>
-    </div>
-  </div>
-  <!-- End: Footer -->
-
-  <script src="/js/genie/jquery.min.js"></script>
-  <script src="/js/genie/bootstrap.min.js"></script>
-  <script src="/js/genie/ansi_up.js"></script>
-  <script src="/js/genie/static.js"></script>
-  <script src="/js/genie/prism.js"></script>
-</body>
+  </body>
 </html>
